完善常见alert、prompt、confirm三种窗口

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function confirmBox() {
   pxu('warning',
     null,
     '您的操作存在风险，是否继续？',
-    '取消',
+    null,
     '确定').then(res => {
     console.log(res)
   });
