1、增加英文readme 2、修改des和title内容过长时padding样式

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function promptBox() {
 function confirmBox() {
   pxu('warning',
     null,
-    '您的操作存在风险，是否继续？',
+    'Please make sure that your information is filled in correctly and cannot be modified after submission？',
     null,
     '确定').then(res => {
     console.log(res)
